Adding or updating HTML file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="theme.css">
     <style>
     
+@font-face {
+font-family: 'Covered By Your Grace';
+src: url('https://fonts.google.com/specimen/Covered+By+Your+Grace');
+}
+@font-face {
+font-family: 'Source Code Pro';
+src: url('https://fonts.google.com/specimen/Source+Code+Pro');
+}
+@font-face {
+font-family: 'Oswald';
+src: url('https://fonts.google.com/specimen/Oswald');
+}
 .normal_text {
 font-family: Source Code Pro;
 font-size: 11.0PT;
