Adding or updating HTML file

--- a/About.html
+++ b/About.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="theme.css">
     <style>
     
+@font-face {
+font-family: 'Roboto';
+src: url('https://fonts.google.com/specimen/Roboto');
+}
 .normal_text {
 font-family: Arial;
 font-size: 11.0PT;
