Adding or updating HTML file

--- a/index.html
+++ b/index.html
@@ -7,18 +7,9 @@
     <link rel="stylesheet" href="theme.css">
     <style>
     
-@font-face {
-font-family: 'Covered By Your Grace';
-src: url('https://fonts.google.com/specimen/Covered+By+Your+Grace');
-}
-@font-face {
-font-family: 'Source Code Pro';
-src: url('https://fonts.google.com/specimen/Source+Code+Pro');
-}
-@font-face {
-font-family: 'Oswald';
-src: url('https://fonts.google.com/specimen/Oswald');
-}
+@font-face {   font-family: 'Covered By Your Grace';   font-style: normal;   font-weight: 400;   font-display: swap;   src: url(https://fonts.gstatic.com/s/coveredbyyourgrace/v15/QGYwz-AZahWOJJI9kykWW9mD6opopoqXSOS0Fg.ttf) format('truetype'); } 
+@font-face {   font-family: 'Source Code Pro';   font-style: normal;   font-weight: 400;   font-display: swap;   src: url(https://fonts.gstatic.com/s/sourcecodepro/v23/HI_diYsKILxRpg3hIP6sJ7fM7PqPMcMnZFqUwX28DMyQhM4.ttf) format('truetype'); } 
+@font-face {   font-family: 'Oswald';   font-style: normal;   font-weight: 400;   font-display: swap;   src: url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvgUE.ttf) format('truetype'); } 
 .normal_text {
 font-family: Source Code Pro;
 font-size: 11.0PT;
