--- a/About.html
+++ b/About.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="theme.css">
     <style>
     
-@font-face {
-font-family: 'Roboto';
-src: url('https://fonts.google.com/specimen/Roboto');
-}
+@font-face {   font-family: 'Roboto';   font-style: normal;   font-weight: 400;   font-display: swap;   src: url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Me5Q.ttf) format('truetype'); } 
 .normal_text {
 font-family: Arial;
 font-size: 11.0PT;
