--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ direction: ltr;
 </span></p><p class="normal_text" style='text-align: center; direction: ltr; '><span style=''>
 </span></p><p class="normal_text" style='text-align: center; direction: ltr; '><span style=''>
 </span></p><p class="normal_text" style='line-height: 1.0; text-align: center; direction: ltr; '><img src="img/vacation_2.jpg" alt="placeholder graphic" style="width: 76.47058823529412%; " /><span style=''>
-</span></p><p class="normal_text" style='direction: ltr; '><img src="img/vacation_3.png" alt="horizontal line" style="width: 76.47058823529412%; " /><span style=''>
-</span></p><p class="normal_text" style='line-height: 1.3; direction: ltr; '><img src="img/vacation_4.jpg" alt="Placeholder image" style="width: 99.44852941176471%; " /><span style='font-family: Source Code Pro; font-size: 10.0PT; color: #999999; '>
+</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><img src="img/vacation_3.png" alt="horizontal line" style="width: 76.47058823529412%; " /><span style=''>
+</span></p><p class="normal_text" style='line-height: 1.3; text-align: center; direction: ltr; '><img src="img/vacation_4.jpg" alt="Placeholder image" style="width: 99.44852941176471%; " /><span style='font-family: Source Code Pro; font-size: 10.0PT; color: #999999; '>
 </span></p><p class="normal_text" style='text-align: right; direction: ltr; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet
 </em></span></p><h1 style='direction: ltr; '><span style=''>THIS IS A HEADER
 </span></h1><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Covered By Your Grace; font-size: 18.0PT; color: #424242; '>- - - - X
