--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ font-family: Oswald;
 font-size: 16.0PT;
 color: #000000;
 line-height: 1.0;
-text-align: center;
 direction: ltr;
 }
 h3 {
@@ -75,7 +74,6 @@ direction: ltr;
 font-family: Covered By Your Grace;
 font-size: 24.0PT;
 color: #666666;
-text-align: center;
 direction: ltr;
 }
 
@@ -95,29 +93,29 @@ direction: ltr;
     </ul>
     </nav>
 </header>
-<div class="content"><p class="normal_text" style='margin-top: 70.0PT; text-align: center; direction: ltr; '><div class="image-container" style="width: 200.0px; height: 226.0px; overflow: hidden; position: relative;"><img src="img/vacation_1.png" style="position: absolute; top: -0.0px; left: -0.0px;" alt="Placeholder graphic" ></img></div><span style=''>
-</span></p><div class="title" style='text-align: center; direction: ltr; '><span style=''>My</span><span style=''> </span><span style='color: #e31c60; '>AMAZING</span><span style='color: #e31c60; '>
+<div class="content"><p class="normal_text" style='margin-top: 70.0PT; direction: ltr; '><img src="img/vacation_1.png" alt="Placeholder graphic" style="width: 67.983px; height: 76.82078999999999px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
+</span></p><div class="title" style='direction: ltr; '><span style=''>My</span><span style=''> </span><span style='color: #e31c60; '>AMAZING</span><span style='color: #e31c60; '>
 </span></div><p class="subtitle" style='direction: ltr; '><span style=''>VACATION…</span><span style='font-size: 24.0PT; color: #666666; '>
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><span style=''>
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><span style=''>
-</span></p><p class="normal_text" style='line-height: 1.0; text-align: center; direction: ltr; '><div class="image-container" style="width: 1400.0px; height: 698.0px; overflow: hidden; position: relative;"><img src="img/vacation_2.jpg" style="position: absolute; top: -0.0px; left: -0.0px;" alt="placeholder graphic" ></img></div><span style=''>
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><div class="image-container" style="width: 1200.0px; height: 14.0px; overflow: hidden; position: relative;"><img src="img/vacation_3.png" style="position: absolute; top: -0.0px; left: -0.0px;" alt="horizontal line" ></img></div><span style=''>
-</span></p><p class="normal_text" style='line-height: 1.3; text-align: center; direction: ltr; '><div class="image-container" style="width: 1200.0px; height: 629.0px; overflow: hidden; position: relative;"><img src="img/vacation_4.jpg" style="position: absolute; top: -0.0px; left: -0.0px;" alt="Placeholder image" ></img></div><span style='font-family: Source Code Pro; font-size: 10.0PT; color: #999999; '>
-</span></p><p class="normal_text" style='text-align: right; direction: ltr; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet
+</span></p><p class="normal_text" style='direction: ltr; '><span style=''>
+</span></p><p class="normal_text" style='direction: ltr; '><span style=''>
+</span></p><p class="normal_text" style='line-height: 1.0; direction: ltr; '><img src="img/vacation_2.jpg" alt="placeholder graphic" style="width: 623.8439999999999px; height: 311.92199999999997px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
+</span></p><p class="normal_text" style='direction: ltr; '><img src="img/vacation_3.png" alt="horizontal line" style="width: 623.8439999999999px; height: 6.665px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
+</span></p><p class="normal_text" style='line-height: 1.3; direction: ltr; '><img src="img/vacation_4.jpg" alt="Placeholder image" style="width: 811.2971249999999px; height: 425.2549096875px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style='font-family: Source Code Pro; font-size: 10.0PT; color: #999999; '>
+</span></p><p class="normal_text" style='direction: ltr; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet
 </em></span></p><h1 style='direction: ltr; '><span style=''>THIS IS A HEADER
 </span></h1><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Covered By Your Grace; font-size: 18.0PT; color: #424242; '>- - - - X
 </span></p><p class="normal_text" style='direction: ltr; '><span style=''>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><div class="image-container" style="width: 1200.0px; height: 14.0px; overflow: hidden; position: relative;"><img src="img/vacation_5.png" style="position: absolute; top: -0.0px; left: -0.0px;" alt="horizontal line" ></img></div><span style='color: #424242; '>
-</span></p><p class="normal_text" style='line-height: 1.0; text-align: center; direction: ltr; '><span style='font-family: Source Code Pro; font-size: 60.0PT; color: #999999; '>“
-</span></p><p class="normal_text" style='line-height: 1.0; text-align: center; direction: ltr; '><span style='font-family: Oswald; font-size: 16.0PT; '>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><span style='font-size: 14.0PT; color: #e31c60; '>-Wendy Writer</span><span style='font-size: 14.0PT; color: #e31c60; '>
-</span></p><p class="normal_text" style='line-height: 1.0; text-align: center; direction: ltr; '><span style='font-family: Source Code Pro; font-size: 60.0PT; color: #999999; '>”</span><span style='font-family: Source Code Pro; font-size: 60.0PT; color: #999999; '>
-</span></p><div style="float: left; width: 38.786764705882355%;"><div class="image-container" style="width: 600.0px; height: 600.0px; overflow: hidden; position: relative;"><img src="img/vacation_6.jpg" style="position: absolute; top: 18.99525px; left: -23.994px;" ></img></div></div><h1 style='direction: ltr; '><span style=''>LOREM IPSUM. DOLOR SIT. 
+</span></p><p class="normal_text" style='direction: ltr; '><img src="img/vacation_5.png" alt="horizontal line" style="width: 623.8439999999999px; height: 6.665px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style='color: #424242; '>
+</span></p><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Source Code Pro; font-size: 60.0PT; color: #999999; '>“
+</span></p><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Oswald; font-size: 16.0PT; '>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
+</span></p><p class="normal_text" style='direction: ltr; '><span style='font-size: 14.0PT; color: #e31c60; '>-Wendy Writer</span><span style='font-size: 14.0PT; color: #e31c60; '>
+</span></p><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Source Code Pro; font-size: 60.0PT; color: #999999; '>”</span><span style='font-family: Source Code Pro; font-size: 60.0PT; color: #999999; '>
+</span></p><img src="img/vacation_6.jpg" style="float: left; width: 421.78902637499993px; height: 421.78902637499993px; " /><h1 style='direction: ltr; '><span style=''>LOREM IPSUM. DOLOR SIT. 
 </span></h1><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Covered By Your Grace; font-size: 18.0PT; color: #424242; '>- - - - X</span><span style=''>
 </span></p><p class="normal_text" style='direction: ltr; '><span style=''>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><div class="image-container" style="width: 1046.0px; height: 652.0px; overflow: hidden; position: relative;"><img src="img/vacation_7.jpg" style="position: absolute; top: -0.0px; left: -0.0px;" alt="Placeholder image" ></img></div><span style=''>
-</span></p><p class="normal_text" style='text-align: center; direction: ltr; '><div class="image-container" style="width: 511.0px; height: 607.4905182160437px; overflow: hidden; position: relative;"><img src="img/vacation_8.jpg" style="position: absolute; top: -34.38625720515847px; left: -0.0px;" alt="Placeholder image" ></img></div><div class="image-container" style="width: 470.25280022621143px; height: 581.1161132305862px; overflow: hidden; position: relative;"><img src="img/vacation_9.jpg" style="position: absolute; top: -79.88388676941395px; left: -63.74719977378845px;" alt="Placeholder image" ></img></div><span style=''>
-</span></p><p class="normal_text" style='line-height: 1.3; text-align: right; direction: ltr; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet</em></span><span style='color: #e31c60; '>
+</span></p><p class="normal_text" style='direction: ltr; '><img src="img/vacation_7.jpg" alt="Placeholder image" style="width: 617.4425px; height: 384.86855640535373px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
+</span></p><p class="normal_text" style='direction: ltr; '><img src="img/vacation_8.jpg" alt="Placeholder image" style="width: 311.92199999999997px; height: 370.90725px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><img src="img/vacation_9.jpg" alt="Placeholder image" style="width: 300.92475px; height: 370.90725px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
+</span></p><p class="normal_text" style='line-height: 1.3; direction: ltr; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet</em></span><span style='color: #e31c60; '>
 </span></p>
 </div><footer>
     Created for free by
