--- a/About.html
+++ b/About.html
@@ -85,7 +85,7 @@ direction: ltr;
     </ul>
     </nav>
 </header>
-<div class="content"><p class="normal_text" style='line-height: 1.4; direction: ltr; '><span style='font-family: Roboto; font-size: 20.0PT; color: #6d64e8; '><strong>About
+<div class="content"><br><div style="clear: both;" /><p class="normal_text" style='line-height: 1.4; direction: ltr; '><span style='font-family: Roboto; font-size: 20.0PT; color: #6d64e8; '><strong>About
 </strong></span></p><div class="title" style='margin-top: 20.0PT; line-height: 1.0; direction: ltr; '><span style='font-family: Roboto; font-size: 34.0PT; color: #283592; '>gdocweb Template</span><span style='font-family: Roboto; font-size: 34.0PT; color: #283592; '>
 </span></div><p class="subtitle" style='margin-top: 10.0PT; line-height: 1.4; direction: ltr; '><span style='font-family: Roboto; font-size: 11.0PT; color: #e01b84; '>September 04, 20XX
 </span></p><p class="normal_text" style='margin-top: 10.0PT; line-height: 1.4; direction: ltr; '><span style='font-family: Roboto; color: #666666; '>
