Adding or updating HTML file

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ text-align: center;
     </ul>
     </nav>
 </header>
-<div class="content"><br><div style="clear: both;" /><p class="normal_text" style='margin-top: 70.0PT; direction: ltr; text-align: center; '><img src="img/vacation_1.png" alt="Placeholder graphic" style="width: 67.983px; height: 76.82078999999999px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
+<div class="content"><div style="clear: both;">&nbsp;</div><br><p class="normal_text" style='margin-top: 70.0PT; direction: ltr; text-align: center; '><img src="img/vacation_1.png" alt="Placeholder graphic" style="width: 67.983px; height: 76.82078999999999px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
 </span></p><div class="title" style='direction: ltr; text-align: center; '><span style=''>My</span><span style=''> </span><span style='color: #e31c60; '>AMAZING</span><span style='color: #e31c60; '>
 </span></div><p class="subtitle" style='direction: ltr; '><span style=''>VACATION…</span><span style='font-size: 24.0PT; color: #666666; '>
 </span></p><p class="normal_text" style='direction: ltr; text-align: center; '><span style=''>
@@ -115,7 +115,7 @@ text-align: center;
 </span></p><img src="img/vacation_6.jpg" style="float: left; width: 267.199683375px; height: 267.199683375px; " /><h1 style='direction: ltr; '><span style=''>LOREM IPSUM. DOLOR SIT. 
 </span></h1><p class="normal_text" style='line-height: 1.0; direction: ltr; '><span style='font-family: Covered By Your Grace; font-size: 18.0PT; color: #424242; '>- - - - X</span><span style=''>
 </span></p><p class="normal_text" style='direction: ltr; '><span style=''>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-</span></p><br><div style="clear: both;" /><p class="normal_text" style='direction: ltr; '><span style=''>
+</span></p><div style="clear: both;">&nbsp;</div><br><p class="normal_text" style='direction: ltr; '><span style=''>
 </span></p><p class="normal_text" style='direction: ltr; text-align: center; '><img src="img/vacation_7.jpg" alt="Placeholder image" style="width: 617.4425px; height: 384.86855640535373px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
 </span></p><p class="normal_text" style='direction: ltr; text-align: center; '><img src="img/vacation_8.jpg" alt="Placeholder image" style="width: 311.92199999999997px; height: 370.90725px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><img src="img/vacation_9.jpg" alt="Placeholder image" style="width: 300.92475px; height: 370.90725px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
 </span></p><p class="normal_text" style='line-height: 1.3; direction: ltr; text-align: center; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet</em></span><span style='color: #e31c60; '>
