--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ text-align: center;
 </span></p><div style="clear: both;">&nbsp;</div><br><p class="normal_text" style='direction: ltr; '><span style=''>
 </span></p><p class="normal_text" style='direction: ltr; text-align: center; '><img src="img/vacation_7.jpg" alt="Placeholder image" style="width: 617.4425px; height: 384.86855640535373px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
 </span></p><p class="normal_text" style='direction: ltr; text-align: center; '><img src="img/vacation_8.jpg" alt="Placeholder image" style="width: 311.92199999999997px; height: 370.90725px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><img src="img/vacation_9.jpg" alt="Placeholder image" style="width: 300.92475px; height: 370.90725px; margin: 9.0PT 9.0PT 9.0PT 9.0PT; " /><span style=''>
-</span></p><p class="normal_text" style='line-height: 1.3; direction: ltr; text-align: center; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet</em></span><span style='color: #e31c60; '>
+</span></p><p class="normal_text" style='line-height: 1.3; direction: ltr; text-align: center; '><span style='font-size: 10.0PT; color: #e31c60; '><em>Lorem ipsum dolor sit amet
+</em></span></p><p class="normal_text" style='direction: ltr; '><span style=''>This page was generated from </span><span style='color: #1155cc; '><u>this document</u></span><span style=''>.</span><span style=''>
 </span></p>
 </div><footer>
     Created for free by
